objects/APXTConga4__Conga_Collection__c.object
<CustomObject>
    <fields>
        <fullName>APXTConga4__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APXTConga4__Is_SF1_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked, this collections will be used by the Composermerge.cmp for one sObject type.</description>
        <inlineHelpText>If use this collection for SalesForce 1.</inlineHelpText>
        <label>Is_SF1_Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APXTConga4__SF1_Binding_sObject_Type__c</fullName>
        <description>The sObject type associated with this collection for SF1.</description>
        <label>SF1_Binding_sObject_Type</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <label>Conga Collection</label>
    <nameField>
        <label>Conga Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>